# jaxmodules

./: README.md  check_attn.py  pyproject.toml
jaxmodules/: attention.py  block_mask.py  logstate.py  nn.py  normalizers.py  prng_utils.py  seriesutils.py  vectorize.py
tests/: test_attention.py  test_block_mask.py  test_einsum.py  test_mapped_attention.py  test_nn.py  test_prng_utils.py  test_vectorize.py
